Test coverage for home component; Render member data

--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -1,6 +1,6 @@
 <mat-card class="member-card">
   <mat-card-header>
-    <mat-card-title>Member</mat-card-title>
+    <mat-card-title>{{ member.first_name }} {{ member.last_name }}</mat-card-title>
     <mat-card-subtitle>Subtitle</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
